--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "nodemon": "^1.14.11"
+    "nodemon": "^1.14.11",
+    "react-event-listener": "^0.6.6",
+    "react-router": "^5.0.0"
   },
   "devDependencies": {},
   "scripts": {
